<resources>
    <string name="app_name">Augustana Observer</string>
    <string name="augie_observer">Augie Observer</string>
    <string name="sports_category">Sports</string>
    <string name="news_category">News</string>
    <string name="arts_category">Arts &amp; Entertainment</string>
    <string name="opinions_category">Opinions</string>
    <string name="features_category">Features</string>
    <string name="text_home">Home</string>
    <string name="text_category">Categories</string>
    <string name="text_search">Search</string>
    <string name="loading_list_items">Loding More Stories...</string>


</resources>
