<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_category"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.newspaperapp.CategorySelector">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:id="@+id/sportsLayout">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/sports_category_image"
            android:id="@+id/sportsImage"/>

        <TextView
            android:text="@string/sports_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_marginTop="12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="230dp"
        android:id="@+id/opinionsLayout">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/sports_category_image"
            android:id="@+id/opinionsImage"/>

        <TextView
            android:text="@string/opinions_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/opinionsText"
            android:layout_marginTop="12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="30dp"
        android:id="@+id/newsLayout">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/sports_category_image"
            android:id="@+id/newsImage"/>

        <TextView
            android:text="@string/news_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newsText"
            android:layout_marginTop="12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="230dp"
        android:id="@+id/artsLayout">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/sports_category_image"
            android:id="@+id/artsImage"/>

        <TextView
            android:text="@string/arts_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/artsText"
            android:layout_marginTop="12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="370dp"
        android:layout_marginLeft="130dp"
        android:id="@+id/featuresLayout">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/sports_category_image"
            android:id="@+id/featuresImage"/>

        <TextView
            android:text="@string/features_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/featuresText"
            android:layout_marginTop="12dp" />
    </LinearLayout>

</RelativeLayout>
